--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -7,7 +7,7 @@
   <title>Express Dev Skills</title>
 </head>
 <body>
-  <h1>Skills</h1>
+  <h1>Skills as of <%= date %></h1>
   <ul>
     <% skills.forEach(skill => { %>
       <li>
