--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -11,11 +11,20 @@
   <ul>
     <% skills.forEach(skill => { %>
       <li>
+        <form 
+          action="/skills/<%= skill._id %>?_method=DELETE" 
+          method="POST"
+          class="delete-form"
+        >
+          <button type="submit" class="delete-form">X</button>
+        </form>
+        <a href="/skills/<%= skill._id %>"><%= skill.text %></a>
 				<%= skill.text %> 
 				- 
 				<%= skill.done ? 'done' : 'not done' %>
 			</li>
     <% }) %>
+    <a href="/skills/new">Add Skill</a>
   </ul>
 </body>
 </html>
